--- a/pwnagotchi/defaults.toml
+++ b/pwnagotchi/defaults.toml
@@ -78,7 +78,7 @@ main.plugins.bt-tether.devices.ios-phone.max_tries = 0
 main.plugins.bt-tether.devices.ios-phone.share_internet = false
 main.plugins.bt-tether.devices.ios-phone.priority = 999
 
-main.plugins.memtemp.enabled = false
+main.plugins.memtemp.enabled = true
 main.plugins.memtemp.scale = "celsius"
 main.plugins.memtemp.orientation = "horizontal"
 
